force-app/main/default/objects/Account/fields/Additional_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Name_2__c</fullName>
    <description>Additional Name 2 for reference in C4C</description>
    <label>Additional Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>