force-app/main/default/objects/Account/fields/Additional_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Name__c</fullName>
    <description>Additional Name for reference with C4C</description>
    <label>Additional Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>