force-app/main/default/objects/Account/fields/C4C_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>C4C_Territory_ID__c</fullName>
    <description>Sales Territory ID from C4C application</description>
    <label>C4C Territory ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>