force-app/main/default/objects/Account/fields/chk_CentralPostingBlock__c.field-meta.xml
<CustomField>
    <fullName>chk_CentralPostingBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Operational Central Block, stops the billing processes, also affects all sales areas. Managed in Athena</description>
    <label>CentralPostingBlock</label>
    <type>Checkbox</type>
</CustomField>