force-app/main/default/objects/Account/fields/chk_CustomerBlock__c.field-meta.xml
<CustomField>
    <fullName>chk_CustomerBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Block</label>
    <type>Checkbox</type>
</CustomField>