force-app/main/default/objects/Account/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <description>Reference filed to C4C - e.g. DE, FR, US</description>
    <label>Country/Region</label>
    <length>3</length>
    <type>Text</type>
</CustomField>