force-app/main/default/objects/Account/fields/dtm_DatetimeofcreationinAthena__c.field-meta.xml
<CustomField>
    <fullName>dtm_DatetimeofcreationinAthena__c</fullName>
    <description>to store the data and time when the Account is created in Athena</description>
    <label>Date/time of creation in Athena</label>
    <type>DateTime</type>
</CustomField>