force-app/main/default/objects/Account/fields/ftxt_GTS__c.field-meta.xml
<CustomField>
    <fullName>ftxt_GTS__c</fullName>
    <description>Indicate if the Customer Block is set. Field is updated by integration with an external system.</description>
    <formula>CASE(pkl_Customer_Block__c, 
&quot;Released&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20),
&quot;Pending&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
&quot;Blocked&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green = Released
Yellow = Pending
Red = Blocked</inlineHelpText>
    <label>GTS</label>
    <type>Text</type>
</CustomField>