force-app/main/default/objects/Account/fields/ftxt_ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ftxt_ShippingCondition__c</fullName>
    <description>Automatically determines the shipping condition based on the selected INCO Terms 1 value</description>
    <formula>CASE(TEXT(pkl_INCOTerms1__c),
     &quot;DAP – Delivered at Place&quot;, &quot;Standard Shipping&quot;,
     &quot;CPT - Carriage Paid To&quot;, &quot;Standard Shipping&quot;,
     &quot;DDP - Delivered Duty Paid&quot;, &quot;Standard Shipping&quot;,
     &quot;FCA - Free Carrier&quot;, &quot;Pickup&quot;,
     &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Condition</label>
    <type>Text</type>
</CustomField>