force-app/main/default/objects/Account/fields/IsProspect__c.field-meta.xml
<CustomField>
    <fullName>IsProspect__c</fullName>
    <formula>INCLUDES(pkm_BoschPartnerRole__c, &quot;BBCUPR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsProspect</label>
    <type>Checkbox</type>
</CustomField>