force-app/main/default/objects/Account/fields/pkl_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>pkl_AccountGroup__c</fullName>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YDE1</fullName>
            </value>
            <value>
                <fullName>YCN1</fullName>
            </value>
            <value>
                <fullName>YJP1</fullName>
            </value>
            <value>
                <fullName>YOM1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>