force-app/main/default/objects/Account/fields/pkl_AccountGroupText__c.field-meta.xml
<CustomField>
    <fullName>pkl_AccountGroupText__c</fullName>
    <description>Account group text from C4C</description>
    <label>Account Group Text</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pkl_AccountGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETDE Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETCN Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETJP Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETNA - OEM/Fleet Domestic Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>