force-app/main/default/objects/Account/fields/pkl_C4C_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>pkl_C4C_Territory_Name__c</fullName>
    <label>C4C Territory Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>C4C_Territory</valueSetName>
    </valueSet>
</CustomField>