force-app/main/default/objects/Account/fields/pkl_CivilianCustomer__c.field-meta.xml
<CustomField>
    <fullName>pkl_CivilianCustomer__c</fullName>
    <label>Civilian Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>