force-app/main/default/objects/Account/fields/pkl_Customer_Block__c.field-meta.xml
<CustomField>
    <fullName>pkl_Customer_Block__c</fullName>
    <description>Indicate if the Customer Block is set. Field is updated by integration with an external system.</description>
    <label>Customer Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>