force-app/main/default/objects/Account/fields/pkl_DeliveryControlHead__c.field-meta.xml
<CustomField>
    <fullName>pkl_DeliveryControlHead__c</fullName>
    <description>Provides the updates of delivery</description>
    <label>Delivery Control Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Delivery allowed</fullName>
            </value>
            <value>
                <fullName>Complete Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>