force-app/main/default/objects/Account/fields/pkl_DuplicateReason__c.field-meta.xml
<CustomField>
    <fullName>pkl_DuplicateReason__c</fullName>
    <label>Duplicate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG (SP) - Customer Discounts</fullName>
            </value>
            <value>
                <fullName>AG (SP) - Different GLN</fullName>
            </value>
            <value>
                <fullName>AG (SP) - Reseller is defined for every business end user (service contract partner)</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Delivery to customer with MLB process (MLB sub-supplier, cross-company, direct)</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Different invoice dispatch types for the same customer</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Distributor Model</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Customer operates several business units under the same address with different partner descriptions (e.g. plant codes)</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Different delivery times</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Different Shipping conditions</fullName>
            </value>
            <value>
                <fullName>WE (SH) - Cross Docking - same Hub Address but shop address coded in name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>