force-app/main/default/objects/Account/fields/pkl_INCOTerms1__c.field-meta.xml
<CustomField>
    <fullName>pkl_INCOTerms1__c</fullName>
    <description>Defines the terms of sales and the passing of risks. Needed for the interface to ERP.</description>
    <label>INCOTERM</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INCOTerms1</valueSetName>
    </valueSet>
</CustomField>