force-app/main/default/objects/Account/fields/pkl_IsTradingPartnerNoRequired_c__c.field-meta.xml
<CustomField>
    <fullName>pkl_IsTradingPartnerNoRequired_c__c</fullName>
    <inlineHelpText>Use Only for Bosch Account</inlineHelpText>
    <label>Required Trading Partner ID/PG No?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>