force-app/main/default/objects/Account/fields/pkl_Language_c__c.field-meta.xml
<CustomField>
    <fullName>pkl_Language_c__c</fullName>
    <description>To prepare a Quote in a proper language</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>