force-app/main/default/objects/Account/fields/pkl_MaxNoofPartialDeliveries__c.field-meta.xml
<CustomField>
    <fullName>pkl_MaxNoofPartialDeliveries__c</fullName>
    <description>Provide the information of no of partial deliveries</description>
    <label>Max. No of Partial Deliveries</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pkl_DeliveryControlHead__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>