force-app/main/default/objects/Account/fields/pkl_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>pkl_PaymentTerms__c</fullName>
    <description>Defines which Payment Terms were negotiated with the customer. Needed for the interface to ERP.</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>