force-app/main/default/objects/Account/fields/pkl_Status__c.field-meta.xml
<CustomField>
    <fullName>pkl_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sent to Athena</fullName>
            </value>
            <value>
                <fullName>Error in sending to Athena</fullName>
            </value>
            <value>
                <fullName>Received in Athena for BP creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>