force-app/main/default/objects/Account/fields/pkm_BoschPartnerRole__c.field-meta.xml
<CustomField>
    <fullName>pkm_BoschPartnerRole__c</fullName>
    <label>Bosch Partner Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBCUEX</fullName>
            </value>
            <value>
                <fullName>BBCUSH</fullName>
            </value>
            <value>
                <fullName>BBCUBP</fullName>
            </value>
            <value>
                <fullName>BBCUPR</fullName>
            </value>
            <value>
                <fullName>Bill-to</fullName>
                <isActive>false</isActive>
                <label>Bill-to</label>
            </value>
            <value>
                <fullName>Ship-to</fullName>
                <isActive>false</isActive>
                <label>Ship-to</label>
            </value>
            <value>
                <fullName>Sold-to</fullName>
                <isActive>false</isActive>
                <label>Sold-to</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>