force-app/main/default/objects/Account/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Used by Sales Team to determine the role of the customer and which territory it belongs to</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETDE Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETUS Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETCN Domestic Customer</fullName>
            </value>
            <value>
                <fullName>ETJP Domestic Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>