force-app/main/default/objects/Account/fields/txt_AccountID_c__c.field-meta.xml
<CustomField>
    <fullName>txt_AccountID_c__c</fullName>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>