force-app/main/default/objects/Account/fields/txt_AccountIDC4C__c.field-meta.xml
<CustomField>
    <fullName>txt_AccountIDC4C__c</fullName>
    <description>C4C reference field</description>
    <label>Account ID C4C</label>
    <length>30</length>
    <type>Text</type>
</CustomField>