force-app/main/default/objects/Account/fields/txt_AthenaUUID__c.field-meta.xml
<CustomField>
    <fullName>txt_AthenaUUID__c</fullName>
    <description>Defines the Athena unique identifier for Account;
Unique field</description>
    <inlineHelpText>Defines the Athena unique identifier for Account;
Unique field</inlineHelpText>
    <label>Bosch Partner Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>