force-app/main/default/objects/Account/fields/txt_CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>txt_CountryRegion__c</fullName>
    <description>Reference filed to C4C - e.g. DE, FR, US</description>
    <label>Country/Region</label>
    <length>3</length>
    <type>Text</type>
</CustomField>