force-app/main/default/objects/Account/fields/txt_CountryRegionText__c.field-meta.xml
<CustomField>
    <fullName>txt_CountryRegionText__c</fullName>
    <description>Reference field to C4C - e.g. Germany, France, United States</description>
    <label>Country/Region Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>