force-app/main/default/objects/Account/fields/txt_DunsId__c.field-meta.xml
<CustomField>
    <fullName>txt_DunsId__c</fullName>
    <description>DUNS number, provided by Dun &amp; Bradstreet, is a unique nine-digit identifier for a single business entity</description>
    <inlineHelpText>DUNS number, provided by Dun &amp; Bradstreet</inlineHelpText>
    <label>DUNS</label>
    <length>60</length>
    <type>Text</type>
</CustomField>