force-app/main/default/objects/Account/fields/txt_DuplicateDescription__c.field-meta.xml
<CustomField>
    <fullName>txt_DuplicateDescription__c</fullName>
    <label>Duplicate Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>