force-app/main/default/objects/Account/fields/txt_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>txt_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>