force-app/main/default/objects/Account/fields/txt_INCOTerms2__c.field-meta.xml
<CustomField>
    <fullName>txt_INCOTerms2__c</fullName>
    <description>Defines at which location the INCO Terms will start.</description>
    <label>INCOTERM Location without Athena</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>