force-app/main/default/objects/Account/fields/txt_InvestigationReason__c.field-meta.xml
<CustomField>
    <fullName>txt_InvestigationReason__c</fullName>
    <description>The reason for the investigation</description>
    <label>Investigation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>