force-app/main/default/objects/Account/fields/txt_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>txt_LegalEntity__c</fullName>
    <description>Used to store the Bosch Partner Number of the Legal Entity of the SF Account</description>
    <inlineHelpText>Used to store the Bosch Partner Number of the Legal Entity of the SF Account</inlineHelpText>
    <label>Legal Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>