force-app/main/default/objects/Account/fields/txt_Name4__c.field-meta.xml
<CustomField>
    <fullName>txt_Name4__c</fullName>
    <label>Name 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>