force-app/main/default/objects/Account/fields/txt_ParentAccountIDC4C__c.field-meta.xml
<CustomField>
    <fullName>txt_ParentAccountIDC4C__c</fullName>
    <description>Reference field for C4C</description>
    <label>Parent Account ID C4C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>