force-app/main/default/objects/Account/fields/txt_R3Id__c.field-meta.xml
<CustomField>
    <fullName>txt_R3Id__c</fullName>
    <description>Mapping IDs from Legacy R3 System</description>
    <inlineHelpText>R3 System Id</inlineHelpText>
    <label>R3 Identification number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>