force-app/main/default/objects/Account/fields/txt_SearchTerm1__c.field-meta.xml
<CustomField>
    <fullName>txt_SearchTerm1__c</fullName>
    <description>Search Term used by Sales team for categorization and searching</description>
    <label>Search Term 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>