force-app/main/default/objects/Account/fields/txt_SearchTerm2__c.field-meta.xml
<CustomField>
    <fullName>txt_SearchTerm2__c</fullName>
    <description>Field used by Sales team for categorization and searching</description>
    <label>Search Term 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>