force-app/main/default/objects/Account/fields/txt_TradingParnerNo__c.field-meta.xml
<CustomField>
    <fullName>txt_TradingParnerNo__c</fullName>
    <inlineHelpText>Use only for Bosch Account</inlineHelpText>
    <label>Trading Partner ID/PG No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>