force-app/main/default/objects/Account/fields/txt_VATID__c.field-meta.xml
<CustomField>
    <fullName>txt_VATID__c</fullName>
    <label>VAT ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>