force-app/main/default/objects/Account/recordTypes/Customer_B2B.recordType-meta.xml
<RecordType>
    <fullName>Customer_B2B</fullName>
    <active>true</active>
    <label>Customer_B2B</label>
</RecordType>