force-app/main/default/objects/Account/recordTypes/Intercompany.recordType-meta.xml
<RecordType>
    <fullName>Intercompany</fullName>
    <active>true</active>
    <label>Intercompany</label>
</RecordType>