force-app/main/default/objects/Account/recordTypes/SSP_Customer.recordType-meta.xml
<RecordType>
    <fullName>SSP_Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>