force-app/main/default/objects/Account/recordTypes/SSP_Intercompany.recordType-meta.xml
<RecordType>
    <fullName>SSP_Intercompany</fullName>
    <active>true</active>
    <label>Intercompany</label>
</RecordType>