force-app/main/default/objects/Account/recordTypes/SSP_Partner.recordType-meta.xml
<RecordType>
    <fullName>SSP_Partner</fullName>
    <active>true</active>
    <label>Partner</label>
</RecordType>