force-app/main/default/objects/Account/recordTypes/SSP_Reseller.recordType-meta.xml
<RecordType>
    <fullName>SSP_Reseller</fullName>
    <active>true</active>
    <label>Reseller</label>
</RecordType>