force-app/main/default/objects/Account/recordTypes/SSP_Supplier.recordType-meta.xml
<RecordType>
    <fullName>SSP_Supplier</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>