force-app/main/default/objects/Account/validationRules/Lock_Account_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Account_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(pkl_Status__c, &quot;Received in Athena for BP creation&quot;),   NOT($Permission.LockedAccountUpdate) )</errorConditionFormula>
    <errorMessage>This Account has been locked until the BP received from Athena</errorMessage>
</ValidationRule>