force-app/main/default/objects/Account/validationRules/SSP_IsTradingPartnerNoRequired_c.validationRule-meta.xml
<ValidationRule>
    <fullName>SSP_IsTradingPartnerNoRequired_c</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( pkl_IsTradingPartnerNoRequired_c__c, &quot;Yes&quot;) &amp;&amp;  ISBLANK(TEXT( txt_TradingParnerNo_c__c )))</errorConditionFormula>
    <errorMessage>Trading Partner ID/PG No? is required.</errorMessage>
</ValidationRule>